Window management done

--- a/src/App.css
+++ b/src/App.css
@@ -236,7 +236,7 @@ select.select option {
 
 .options-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 2rem;
 }
 
